fix some footer social icons alignment issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -672,9 +672,15 @@ EXTERNAL libraries look-n-feel
 }
 
 /* general styling of pretty much all font-awesome icons */
+.socialfooter {
+	margin-left: 20px;
+}
+
 .socialfooter > a i {
 	color: white;
-	padding: 15px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-left: 15px;
 	transition: all 0.2s ease-in-out;
 }
 
@@ -685,6 +691,10 @@ EXTERNAL libraries look-n-feel
 .twitter-tweet {
 	margin-left:auto;
 	margin-right: auto;
+}
+
+i.fa.fa-twitter.fa-2x {
+	margin-left: 0px;
 }
 
 
